@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020231115"
-#define public MagickPackageReleaseDate "snapshot-20231115"
+#define public MagickPackageVersionAddendum ".020231116"
+#define public MagickPackageReleaseDate "snapshot-20231116"
