@@ -37,6 +37,16 @@
 </div>
 
 <div class="document">
+<p>2023-11-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>www/thanks.rst: Provide attributions expected by
+<a class="reference external" href="https://foss.heptapod.net/">https://foss.heptapod.net/</a></p></li>
+<li><p>www/Hg.rst: Replace OSDN with foss.heptapod.net.</p></li>
+<li><p>README.txt: Replace OSDN with foss.heptapod.net.</p></li>
+<li><p>LICENSE: Provide a license file at an expected location.</p></li>
+</ul>
+</blockquote>
 <p>2023-11-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
