@@ -75,8 +75,8 @@ your changes with others.</p>
 </div>
 <div class="section" id="web-access">
 <h1><a class="toc-backref" href="#id2">Web Access</a></h1>
-<p>The <a class="reference external" href="http://hg.code.sf.net/p/graphicsmagick/code/">GraphicsMagick repository at SourceForge</a> and <a class="reference external" href="https://hg.osdn.net/view/graphicsmagick/GM">GraphicsMagick
-repository at OSDN</a> web interfaces are available which may be used to
+<p>The <a class="reference external" href="http://hg.code.sf.net/p/graphicsmagick/code/">GraphicsMagick repository at SourceForge</a> and <a class="reference external" href="https://foss.heptapod.net/graphicsmagick/graphicsmagick">GraphicsMagick
+repository at Heptapod</a> web interfaces are available which may be used to
 interactively view the latest versions of files (or the changes to
 files) using your web browser.  These two servers will be updated at
 about the same time so they should normally contain the same content.</p>
@@ -87,8 +87,8 @@ about the same time so they should normally contain the same content.</p>
 directory, issue the command to one of the two public servers:</p>
 <pre class="literal-block">hg clone http://hg.code.sf.net/p/graphicsmagick/code GM</pre>
 <p>or:</p>
-<pre class="literal-block">hg clone https://hg.osdn.net/view/graphicsmagick/GM</pre>
-<p>The repository is large (e.g. 239MB of Hg content, resulting in 299MB
+<pre class="literal-block">hg clone https://foss.heptapod.net/graphicsmagick/graphicsmagick GM</pre>
+<p>The repository is large (e.g. 296M of Hg content, resulting in 450M
 after files are extracted), so some time may be required to transfer
 all the changesets.  Patience is a virtue!</p>
 <p>Please note that since the introduction of an HTTP load balancer,
