@@ -70,9 +70,9 @@ at <a class="reference external" href="http://sourceforge.net/projects/graphicsm
 <p>GraphicsMagick is a continual work in progress. The very latest code
 is available via the Mercurial distributed source control management
 tool (<a class="reference external" href="https://www.mercurial-scm.org/">https://www.mercurial-scm.org/</a>). GraphicsMagick may be retrieved
-from OSDN or SourceForge via the following commands:</p>
+from foss.heptapod.net or SourceForge via the following commands:</p>
 <blockquote>
-<p>hg clone <a class="reference external" href="https://hg.osdn.net/view/graphicsmagick/GM">https://hg.osdn.net/view/graphicsmagick/GM</a> GM</p>
+<p>hg clone <a class="reference external" href="https://foss.heptapod.net/graphicsmagick/graphicsmagick">https://foss.heptapod.net/graphicsmagick/graphicsmagick</a> GM</p>
 <p>hg clone <a class="reference external" href="http://hg.code.sf.net/p/graphicsmagick/code/">http://hg.code.sf.net/p/graphicsmagick/code/</a> GM</p>
 </blockquote>
 <p>Mercurial provides a complete stand-alone repository which contains
