@@ -46,15 +46,29 @@ may have not contributed code but contributed substantially in other
 ways:</p>
 <div class="contents local topic" id="contents">
 <ul class="simple">
-<li><p><a class="reference internal" href="#fuzz-testing" id="id1">Fuzz Testing</a></p></li>
-<li><p><a class="reference internal" href="#security-analysis-reports" id="id2">Security Analysis/Reports</a></p></li>
-<li><p><a class="reference internal" href="#static-code-analysis" id="id3">Static Code Analysis</a></p></li>
-<li><p><a class="reference internal" href="#software-analysis-tools" id="id4">Software Analysis Tools</a></p></li>
-<li><p><a class="reference internal" href="#additional-acknowledgements" id="id5">Additional Acknowledgements</a></p></li>
+<li><p><a class="reference internal" href="#project-hosting" id="id1">Project Hosting</a></p></li>
+<li><p><a class="reference internal" href="#fuzz-testing" id="id2">Fuzz Testing</a></p></li>
+<li><p><a class="reference internal" href="#security-analysis-reports" id="id3">Security Analysis/Reports</a></p></li>
+<li><p><a class="reference internal" href="#static-code-analysis" id="id4">Static Code Analysis</a></p></li>
+<li><p><a class="reference internal" href="#software-analysis-tools" id="id5">Software Analysis Tools</a></p></li>
+<li><p><a class="reference internal" href="#additional-acknowledgements" id="id6">Additional Acknowledgements</a></p></li>
 </ul>
 </div>
+<div class="section" id="project-hosting">
+<h1><a class="toc-backref" href="#id1">Project Hosting</a></h1>
+<blockquote>
+<ul class="simple">
+<li><p>Hosting at <a class="reference external" href="https://foss.heptapod.net/">https://foss.heptapod.net/</a> (since 2023) is donated by Clever Cloud
+&lt;<a class="reference external" href="https://clever-cloud.com/">https://clever-cloud.com/</a>&gt; and Octobus &lt;<a class="reference external" href="https://octobus.net/">https://octobus.net/</a>&gt;.</p></li>
+<li><p>Hosting at <a class="reference external" href="https://sourceforge.net/">https://sourceforge.net/</a> (since 2003) is provided for
+free by SourceForge &lt;<a class="reference external" href="https://sourceforge.net/about">https://sourceforge.net/about</a>&gt;.</p></li>
+<li><p>Hosting at <a class="reference external" href="http://www.graphicsmagick.org/">http://www.graphicsmagick.org/</a> (since 2003) is provided
+by Bob Friesenhahn.</p></li>
+</ul>
+</blockquote>
+</div>
 <div class="section" id="fuzz-testing">
-<h1><a class="toc-backref" href="#id1">Fuzz Testing</a></h1>
+<h1><a class="toc-backref" href="#id2">Fuzz Testing</a></h1>
 <blockquote>
 <ul class="simple">
 <li><p>Gustavo Grieco</p></li>
@@ -69,7 +83,7 @@ ways:</p>
 </blockquote>
 </div>
 <div class="section" id="security-analysis-reports">
-<h1><a class="toc-backref" href="#id2">Security Analysis/Reports</a></h1>
+<h1><a class="toc-backref" href="#id3">Security Analysis/Reports</a></h1>
 <blockquote>
 <ul class="simple">
 <li><p>John Lightsey</p></li>
@@ -80,7 +94,7 @@ ways:</p>
 </blockquote>
 </div>
 <div class="section" id="static-code-analysis">
-<h1><a class="toc-backref" href="#id3">Static Code Analysis</a></h1>
+<h1><a class="toc-backref" href="#id4">Static Code Analysis</a></h1>
 <blockquote>
 <ul class="simple">
 <li><p><a class="reference external" href="http://www.synopsys.com/software/coverity/">Coverity</a> was used (free of charge) to perform static code
@@ -90,7 +104,7 @@ now zero reported defects per 1000 lines of code.</p></li>
 </blockquote>
 </div>
 <div class="section" id="software-analysis-tools">
-<h1><a class="toc-backref" href="#id4">Software Analysis Tools</a></h1>
+<h1><a class="toc-backref" href="#id5">Software Analysis Tools</a></h1>
 <blockquote>
 <ul class="simple">
 <li><p><a class="reference external" href="http://lcamtuf.coredump.cx/afl/">American fuzzy lop</a> was used (by many) to produce and discover
@@ -107,7 +121,7 @@ well as memory leaks.</p></li>
 </blockquote>
 </div>
 <div class="section" id="additional-acknowledgements">
-<h1><a class="toc-backref" href="#id5">Additional Acknowledgements</a></h1>
+<h1><a class="toc-backref" href="#id6">Additional Acknowledgements</a></h1>
 <dl class="simple">
 <dt>David Pensak, E. I. du Pont de Nemours and Company</dt>
 <dd><p>For providing the computing environment that made
